--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <nav>
             <ul>
-            <li><a href="./main.html">Main</a></li>
+            <li><a href="./index.html">Main</a></li>
             <li><a href="./event.html">Event</a></li>
             <li><a href="./about.html">About us</a></li>
             <li><a href="./website.html">Website</a></li>
